# kdenetwork-filesharing

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  CMakeLists.txt  Makefile.am  Messages.sh  org.kde.kdenetwork-filesharing.metainfo.xml
advanced/: CMakeLists.txt  Makefile.am
advanced/kcm_sambaconf/: CMakeLists.txt  ChangeLog  Makefile.am  TODO  common.cpp  common.h  dictmanager.cpp  dictmanager.h  expertuserdlg.ui  filemodedlg.ui  filemodedlgimpl.cpp  filemodedlgimpl.h  groupselectdlg.ui  groupselectdlg.ui.h  hiddenfileview.cpp  hiddenfileview.h  joindomaindlg.ui  joindomaindlg.ui.h  kcminterface.cpp  kcminterface.h  kcminterface.ui  kcminterface.ui.h  kcmprinterdlg.ui  kcmprinterdlg.ui.h  kcmsambaconf.cpp  kcmsambaconf.desktop  kcmsambaconf.h  konqinterface.ui  konqinterface.ui.h  ksambakonqiplugin.desktop  ksambapropertiesdialogplugin.cpp  ksambapropertiesdialogplugin.h  linuxpermissionchecker.cpp  linuxpermissionchecker.h  passwd.cpp  passwd.h  printerdlgimpl.cpp  printerdlgimpl.h  programmingconventions.txt  qmultichecklistitem.cpp  (+22 more)
advanced/knfsplugin/: Makefile.am  cmdialog.ui  cmdialogimpl.cpp  cmdialogimpl.h  hostprops.cpp  hostprops.ui  hostprops.ui.h  kcmnfsmodule.cpp  kcmnfsmodule.desktop  kcmnfsmodule.h  knfskonqiplugin.desktop  nfsconfigwidget.cpp  nfsconfigwidget.h  nfsdialog.ui  nfsdialog.ui.h  nfsdialogimpl.cpp  nfsdialogimpl.h  nfsentry.cpp  nfsentry.h  nfsfile.cpp  nfsfile.h  nfshostdlg.cpp  nfshostdlg.h  nfspropsdlgplugin.cpp  nfspropsdlgplugin.h
advanced/nfs/: CMakeLists.txt  Makefile.am  hostprops.ui  hostprops.ui.h  nfsdialog.cpp  nfsdialog.h  nfsdialoggui.ui  nfsdialoggui.ui.h  nfsentry.cpp  nfsentry.h  nfsfile.cpp  nfsfile.h  nfshostdlg.cpp  nfshostdlg.h
advanced/propsdlgplugin/: CMakeLists.txt  Makefile.am  fileshare_propsdlgplugin.desktop  model.cpp  propertiespage.cpp  propertiespage.h  propertiespagegui.ui  propertiespagegui.ui.h  propsdlgshareplugin.cpp  propsdlgshareplugin.h
cmake/: Findnet.cmake  Findtestparm.cmake
po/ar/: kfileshare.po
po/ast/: kfileshare.po
po/az/: kfileshare.po
po/be/: kfileshare.po
po/bg/: kfileshare.po
po/br/: kfileshare.po
po/bs/: kfileshare.po
po/ca/: kfileshare.po
po/ca@valencia/: kfileshare.po
po/cs/: kfileshare.po
po/cy/: kfileshare.po
po/da/: kfileshare.po
po/de/: kfileshare.po
po/el/: kfileshare.po
po/en_GB/: kfileshare.po
po/eo/: kfileshare.po
po/es/: kfileshare.po
po/et/: kfileshare.po
po/eu/: kfileshare.po
po/fa/: kfileshare.po
po/fi/: kfileshare.po
po/fr/: kfileshare.po
po/ga/: kfileshare.po
po/gl/: kfileshare.po
po/he/: kfileshare.po
po/hi/: kfileshare.po
po/hne/: kfileshare.po
po/hr/: kfileshare.po
po/hsb/: kfileshare.po
po/hu/: kfileshare.po
po/ia/: kfileshare.po
po/id/: kfileshare.po
po/is/: kfileshare.po
po/it/: kfileshare.po
po/ja/: kfileshare.po
po/ka/: kfileshare.po
po/kk/: kfileshare.po
po/km/: kfileshare.po
po/ko/: kfileshare.po
po/lt/: kfileshare.po
po/lv/: kfileshare.po
po/mai/: kfileshare.po
po/mk/: kfileshare.po
po/mr/: kfileshare.po
po/ms/: kfileshare.po
po/nb/: kfileshare.po
po/nds/: kfileshare.po
po/ne/: kfileshare.po
po/nl/: kfileshare.po
po/nn/: kfileshare.po
po/oc/: kfileshare.po
po/pa/: kfileshare.po
po/pl/: kfileshare.po
po/pt/: kfileshare.po
po/pt_BR/: kfileshare.po
po/ro/: kfileshare.po
po/ru/: kfileshare.po
po/sa/: kfileshare.po
po/se/: kfileshare.po
po/sk/: kfileshare.po
po/sl/: kfileshare.po
po/sq/: kfileshare.po
po/sr/: kfileshare.po
po/sr@ijekavian/: kfileshare.po
po/sr@ijekavianlatin/: kfileshare.po
po/sr@latin/: kfileshare.po
po/sv/: kfileshare.po
po/ta/: kfileshare.po
po/tg/: kfileshare.po
po/th/: kfileshare.po
po/tr/: kfileshare.po
po/ug/: kfileshare.po
po/uk/: kfileshare.po
po/vi/: kfileshare.po
po/zh_CN/: kfileshare.po
po/zh_HK/: kfileshare.po
po/zh_TW/: kfileshare.po
samba/: CMakeLists.txt
samba/aclproperties/: CMakeLists.txt  README.md  acccrtl.h  ace.h  aceobject.cpp  aceobject.h  debug.cpp  debug.h  model.cpp  model.h  plugin.cpp  plugin.h  samba-acl.json  winnt.h
samba/aclproperties/qml/: ACEPage.qml  LoadingPage.qml  MainPage.qml  NoDataPage.qml  main.qml  qml.qrc
samba/filepropertiesplugin/: CMakeLists.txt  authhelper.cpp  authhelper.h  delegate.cpp  delegate.h  groupmanager.cpp  groupmanager.h  model.cpp  model.h  org.freedesktop.systemd1.Manager.xml  org.kde.filesharing.samba.actions  permissionshelper.cpp  permissionshelper.h  sambainstaller.cpp  sambainstaller.h  sambausershareplugin.cpp  sambausershareplugin.desktop  sambausershareplugin.h  sambausershareplugin.json  sambausershareplugin.ui  servicedefinitions.h  servicehelper.cpp  servicehelper.h  usermanager.cpp  usermanager.h
samba/filepropertiesplugin/kauth/: CMakeLists.txt  authhelper.cpp  authhelper.h  org.kde.filesharing.samba.actions
samba/filepropertiesplugin/qml/: ACLPage.qml  ChangePassword.qml  ChangePermissionsPage.qml  ConnectionAddresses.qml  GroupPage.qml  InstallPage.qml  MissingSambaPage.qml  RebootPage.qml  ServicePage.qml  UserPage.qml  main.qml  qml.qrc
simple/: CMakeLists.txt  Makefile.am  controlcenter.ui  controlcenter.ui.h  fileshare.cpp  fileshare.desktop  fileshare.h  groupconfigdlg.cpp  groupconfigdlg.h  groupconfiggui.ui  groupconfiggui.ui.h  krichtextlabel.cpp  krichtextlabel.h
